Task: Step IX. progress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "32000:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
+      SECRET_KEY: $SECRET_KEY
     volumes:
       - ./db:/docker-entrypoint-initdb.d/:ro
 
